--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
 	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
+			  <li class="nav-item"><a href="#exp-section" class="nav-link"><span>Experience</span></a></li>
+			  <li class="nav-item"><a href="#int-section" class="nav-link"><span>Internships</span></a></li>
 	          <li class="nav-item"><a href="#project-section" class="nav-link"><span>Projects</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 	        </ul>
@@ -297,10 +299,6 @@
 			</div>
 		</div>
     </section>
-
-
-
-	
     <section class="ftco-section ftco-no-pb" id="resume-section">
     	<div class="container">
     		<div class="row justify-content-center pb-5">
@@ -315,13 +313,53 @@
 			</div>
 		</div>
         </div>
-
+	<section class="ftco-section ftco-no-pb" id="exp-section">	
 		<div class="row">
 			<h1 class="big-4">Experience</h1>
 			<div class="underline"></div>
 		</div>
 		<br>
 		
+		<div class="row">
+				<div class="col-md-6">
+					<div class="resume-wrap ftco-animate">
+						<span class="date">January 2020-December 2022</span>
+						<h2>Software Developer</h2>
+						<span class="position">Tata Consultancy Services, India</span>
+						<p class="mt-4">Tata Consultancy Services is a global IT services, consulting, and business solutions leader, known for its innovative and customer-centric approach. 
+							<ul>
+								<li>Developed backend microservices with Node.js, Express.js, and MongoDB, improving API response times.</li>
+								<li>Migrated Android app screens to React Native, reducing deployment wait time by 45%.</li>
+								<li>Engineered a dashboard for configuring provider metrics, and integrated Festival Management System, reducing no-shows by 85%.</li>
+							</ul>
+						</p>
+					</div>
+
+				</div>
+
+				<div class="col-md-6">
+					<div class="resume-wrap ftco-animate">
+						<span class="date">July 2019-January 2022</span>
+						<h2>Software Engineer</h2>
+						<span class="position">NCR Corporation, India</span>
+						<p class="mt-4">NCR Corporation is a prominent provider of software, hardware, and services for banks, retailers, restaurants, and small businesses. 
+							<ul>
+								<li>Developed web applications for banks using ReactJS and Spring Boot, achieving 100% test coverage.</li>
+								<li>Optimized backend API response times from 180ms to 70ms through profiling and load testing.</li>
+								<li>Led a team to develop an organizational hiring platform, satisfying onboarding needs and delivering value.</li>
+							</ul>
+						</p>
+					</div>
+				</div>
+			</div>
+		<br>
+		<br>
+	<section class="ftco-section ftco-no-pb" id="int-section">
+		<div class="row">
+			<h1 class="big-4">Internships</h1>
+			<div class="underline"></div>
+		</div>
+		<br>
 		<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
@@ -341,42 +379,10 @@
 
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">January 2020-December 2022</span>
-						<h2>Software Developer</h2>
-						<span class="position">Tata Consultancy Services, India</span>
-						<p class="mt-4">Tata Consultancy Services is a global IT services, consulting, and business solutions leader, known for its innovative and customer-centric approach. 
-							<ul>
-								<li>Developed backend microservices with Node.js, Express.js, and MongoDB, improving API response times.</li>
-								<li>Migrated Android app screens to React Native, reducing deployment wait time by 45%.</li>
-								<li>Engineered a dashboard for configuring provider metrics, and integrated Festival Management System, reducing no-shows by 85%.</li>
-							</ul>
-						</p>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-6">
-					<div class="resume-wrap ftco-animate">
-						<span class="date">July 2019-January 2022</span>
-						<h2>Software Engineer</h2>
-						<span class="position">NCR Corporation, India</span>
-						<p class="mt-4">NCR Corporation is a prominent provider of software, hardware, and services for banks, retailers, restaurants, and small businesses. 
-							<ul>
-								<li>Developed web applications for banks using ReactJS and Spring Boot, achieving 100% test coverage.</li>
-								<li>Optimized backend API response times from 180ms to 70ms through profiling and load testing.</li>
-								<li>Led a team to develop an organizational hiring platform, satisfying onboarding needs and delivering value.</li>
-							</ul>
-						</p>
-					</div>
-
-				</div>
-
-				<div class="col-md-6">
-					<div class="resume-wrap ftco-animate">
 						<span class="date">June 2018-December 2018</span>
 						<h2>Software Engineer Intern</h2>
 						<span class="position">KPMG, India</span>
-						<p class="mt-4">iKPMG India is a leading professional services firm offering audit, tax, and advisory services to enhance business performance and drive growth. 
+						<p class="mt-4">KPMG India is a leading professional services firm offering audit, tax, and advisory services to enhance business performance and drive growth. 
 							<ul>
 								<li>Designed and developed POCs for low-code applications using Microsoft Power Suite.</li>
 								<li>Integrated SharePoint, Outlook, Teams, and internal APIs.</li>
@@ -386,7 +392,6 @@
 					</div>
 				</div>
 			</div>
-
 		<br>
 		<br>
 
@@ -400,8 +405,9 @@
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
     					<span class="date">January 2023-May 2024</span>
-    					<h2>Master of Science in Computer Science</h2>
+    					<h2>Masters in Computer Science</h2>
     					<span class="position">Wichita State University, KS, USA</span>
+						<p class="mt-4">Wichita State University is one of top most University in The United States that offers a comprehensive Master's in Computer Science program that emphasizes practical experience and research opportunities to prepare students for advanced careers in technology and academia.</p>
     					<p class="mt-4">Grade: 4.0/4.0.</p>
     				</div>
     			</div>
@@ -409,8 +415,9 @@
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
     					<span class="date">August 2015-May 2019</span>
-    					<h2>Bachelor of Technology in Computer Science</h2>
-    					<span class="position">Jawaharlal Nehru Technological University, Kakinada, India</span>
+    					<h2>Bachelors in Computer Science</h2>
+    					<span class="position">JNTUK, India</span>
+						<p class="mt-4">Jawaharlal Nehru Technological University, Kakinada (JNTUK) is a Government owned College for Higher Education in India which offers a rigorous Bachelor's in Computer Science program, focusing on cutting-edge research, innovation, and industry-relevant skills to equip students.</p>
     					<p class="mt-4">Grade: First class distinction.</p>
     				</div>
 				</div>
@@ -507,7 +514,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="50+">0</strong>
+                <strong class="number" data-number="50">0</strong>
                 <span>Projects</span>
               </div>
             </div>
@@ -583,7 +590,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:ratnaprabhakarmajji@gmail.com">ratnaprabhakarmajji@gmail.com</a></p>
+	            <p class="text-center"><a href="mailto:ratnaprabhakarmajji@gmail.com">ratnaprabhakarmajji@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -592,7 +599,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="#">resumelink</a></p>
+	            <p><a href="Ratna_Prabhakar_CV_SDE.pdf">resumelink</a></p>
 	          </div>
           </div>
 
@@ -627,7 +634,7 @@
 			<div class="col-md-12 text-center">
   
 			  <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-	Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website and its content are the exclusive property of the website owner and are protected by international copyright laws. No part of this website may be copied, reproduced, distributed, or transmitted in any form or by any means without the prior written permission of the website owner<a href="https://colorlib.com" target="_blank"></a>
+	Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved. This website and its content are the exclusive property of the website owner and are protected by copyright. Unauthorized use or reproduction is prohibited without the owner's permission.<a href="https://colorlib.com" target="_blank"></a>
 	<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 			</div>
 		  </div>
