--- a/index.html
+++ b/index.html
@@ -128,9 +128,8 @@
 	        <ul class="navbar-nav nav ml-auto">
 	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
-	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
-			  <li class="nav-item"><a href="#exp-section" class="nav-link"><span>Experience</span></a></li>
-			  <li class="nav-item"><a href="#int-section" class="nav-link"><span>Internships</span></a></li>
+			  <li class="nav-item"><a href="#experience" class="nav-link"><span>Experience</span></a></li>
+			  <li class="nav-item"><a href="#education" class="nav-link"><span>Education</span></a></li>
 	          <li class="nav-item"><a href="#project-section" class="nav-link"><span>Projects</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 	        </ul>
@@ -161,9 +160,9 @@
 
 						// Create an array of typing text
 						const typingTexts = [
-						'Software Developer  ',
-						'Junior Project Coordinator  ',
-						'Scrum Master   ',
+						'Software Developer',
+						'AWS Certified Developer',
+						'Scrum Master',
 						];
 
 						// Create a function to display the typing animation for a given text
@@ -299,68 +298,73 @@
 			</div>
 		</div>
     </section>
+
+
+
+	
     <section class="ftco-section ftco-no-pb" id="resume-section">
     	<div class="container">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>Experienced software developer with a Master's in Computer Science (4.0 GPA) and a Bachelor's in Computer Science (CGPA 9.1). Skilled in Java, C/C++, Python, JavaScript, TypeScript, and Kotlin. Proficient in PostgreSQL, MongoDB, MySQL, Firebase, T-SQL, Azure, and AWS. Experienced in building scalable backend microservices, developing cloud-based solutions, and optimizing API performance. Worked at GE Healthcare, Tata Consultancy Services, and NCR Corporation. Successfully implemented microservices, automated deployment processes, and led cross-functional projects. Developed impactful projects such as a home services web app and an Android e-wallet app. Proficient in using development tools like Git, JMeter, CI/CD, Docker, Agile, and SCRUM.</p>
+            <p>Experienced software developer with a Master's in Computer Science (4.0 GPA) and a Bachelor's in Civil Engineering (CGPA 9.1). Skilled in Java, C/C++, Python, JavaScript, TypeScript, and Kotlin. Proficient in PostgreSQL, MongoDB, MySQL, Firebase, T-SQL, Azure, and AWS. Experienced in building scalable backend microservices, developing cloud-based solutions, and optimizing API performance. Worked at GE Healthcare, Tata Consultancy Services, and NCR Corporation. Successfully implemented microservices, automated deployment processes, and led cross-functional projects. Developed impactful projects such as a home services web app and an Android e-wallet app. Proficient in using development tools like Git, JMeter, CI/CD, Docker, Agile, and SCRUM.</p>
           </div>
 		  <div class="row justify-content-center pb-5">
 			<div class="col-md-10 text-center ftco-animate">
-				<p><a href="Ratna_Prabhakar_CV_SDE.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
+				<p><a href="Prabhakar_Resume.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
 			</div>
 		</div>
         </div>
-	<section class="ftco-section ftco-no-pb" id="exp-section">	
+
+	<section class="ftco-section ftco-no-pb" id="experience"></section>
 		<div class="row">
 			<h1 class="big-4">Experience</h1>
 			<div class="underline"></div>
 		</div>
 		<br>
-		
 		<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">January 2020-December 2022</span>
-						<h2>Software Developer</h2>
-						<span class="position">Tata Consultancy Services, India</span>
-						<p class="mt-4">Tata Consultancy Services is a global IT services, consulting, and business solutions leader, known for its innovative and customer-centric approach. 
+						<span class="date">January 2021-December 2022</span>
+						<h2>Full Stack Developer</h2>
+						<span class="position">SAP Labs, India</span>
+						<p class="mt-4">SAP Labs India is a leading global provider of enterprise software solutions and services, enhancing business operations through innovative technologies.
 							<ul>
-								<li>Developed backend microservices with Node.js, Express.js, and MongoDB, improving API response times.</li>
-								<li>Migrated Android app screens to React Native, reducing deployment wait time by 45%.</li>
-								<li>Engineered a dashboard for configuring provider metrics, and integrated Festival Management System, reducing no-shows by 85%.</li>
+								<li>Developed single-page applications using Angular 11, enhancing user experience with advanced features like routing, services, and directives.</li>
+								<li>Built and optimized microservices using Spring Boot, Java 8 functionalities, and implemented robust security with Spring Security and Spring MVC.</li>
+								<li>Configured and deployed CI/CD pipelines using GitLab, Docker, and Kubernetes, automating the deployment of microservices on AWS Cloud.</li>
+								<li>Automated API Gateway configurations with AWS CloudFormation and Terraform, streamlining the development lifecycle and enhancing system efficiency.</li>
+								<li>Employed AWS Lambda, EC2, and S3 for seamless cloud integration and optimized application performance.</li>
 							</ul>
-						</p>
+						</p>						
 					</div>
-
 				</div>
-
+			
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">July 2019-January 2022</span>
-						<h2>Software Engineer</h2>
-						<span class="position">NCR Corporation, India</span>
-						<p class="mt-4">NCR Corporation is a prominent provider of software, hardware, and services for banks, retailers, restaurants, and small businesses. 
+						<span class="date">August 2019-January 2021</span>
+						<h2>Java Developer</h2>
+						<span class="position">OpenText, India</span>
+						<p class="mt-4">OpenText India is a global leader in enterprise information management, providing software solutions that enable organizations to manage and leverage their data effectively.
 							<ul>
-								<li>Developed web applications for banks using ReactJS and Spring Boot, achieving 100% test coverage.</li>
-								<li>Optimized backend API response times from 180ms to 70ms through profiling and load testing.</li>
-								<li>Led a team to develop an organizational hiring platform, satisfying onboarding needs and delivering value.</li>
+								<li>Developed reusable Angular components and enhanced legacy code, improving the front-end framework's efficiency and user experience.</li>
+								<li>Designed user interfaces using React JS, Bootstrap, and JavaScript, and implemented backend functionality with Spring MVC and Hibernate.</li>
+								<li>Built and deployed a geo-based social network application using React JS, Spring Boot, and AWS services like EC2, S3, and CloudFormation.</li>
+								<li>Developed RESTful services and implemented complex transactions using Java 1.8 features, enhancing code quality and performance.</li>
+								<li>Managed CI/CD pipelines with Jenkins, Maven, and Git for continuous integration and streamlined deployments.</li>
 							</ul>
-						</p>
+						</p>						
 					</div>
 				</div>
 			</div>
-		<br>
-		<br>
-	<section class="ftco-section ftco-no-pb" id="int-section">
+
 		<div class="row">
-			<h1 class="big-4">Internships</h1>
+			<h1 class="big-4">Internship</h1>
 			<div class="underline"></div>
 		</div>
 		<br>
-		<div class="row">
+			<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">May 2023-August 2023</span>
@@ -392,22 +396,22 @@
 					</div>
 				</div>
 			</div>
+
 		<br>
 		<br>
 
+    <section class="ftco-section ftco-no-pb" id="education"></section>
 		<div class="row">
 			<h1 class="big-4">Education</h1>
 			<div class="underline"></div>
 		</div>
 		<br>
-		
 			<div class="row">
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
     					<span class="date">January 2023-May 2024</span>
-    					<h2>Masters in Computer Science</h2>
+    					<h2>Master of Science in Computer Science</h2>
     					<span class="position">Wichita State University, KS, USA</span>
-						<p class="mt-4">Wichita State University is one of top most University in The United States that offers a comprehensive Master's in Computer Science program that emphasizes practical experience and research opportunities to prepare students for advanced careers in technology and academia.</p>
     					<p class="mt-4">Grade: 4.0/4.0.</p>
     				</div>
     			</div>
@@ -415,9 +419,8 @@
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
     					<span class="date">August 2015-May 2019</span>
-    					<h2>Bachelors in Computer Science</h2>
-    					<span class="position">JNTUK, India</span>
-						<p class="mt-4">Jawaharlal Nehru Technological University, Kakinada (JNTUK) is a Government owned College for Higher Education in India which offers a rigorous Bachelor's in Computer Science program, focusing on cutting-edge research, innovation, and industry-relevant skills to equip students.</p>
+    					<h2>Bachelor of Technology in Civil Engineering</h2>
+    					<span class="position">Jawaharlal Nehru Technological University, Kakinada, India</span>
     					<p class="mt-4">Grade: First class distinction.</p>
     				</div>
 				</div>
@@ -514,7 +517,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="50">0</strong>
+                <strong class="number" data-number="50+">0</strong>
                 <span>Projects</span>
               </div>
             </div>
@@ -581,7 +584,7 @@
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://+14254357678">+ 1 (425)-435-7678</a></p>
+	            <p><a href="tel://+14254357678">+ 1 (760)-981-7972</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -590,7 +593,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p class="text-center"><a href="mailto:ratnaprabhakarmajji@gmail.com">ratnaprabhakarmajji@gmail.com</a></p>
+	            <p><a href="mailto:ratnaprabhakarmajji@gmail.com">ratnamajji817972@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -599,7 +602,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="Ratna_Prabhakar_CV_SDE.pdf">resumelink</a></p>
+	            <p><a href="Prabhakar_Resume.pdf">resumelink</a></p>
 	          </div>
           </div>
 
@@ -634,7 +637,7 @@
 			<div class="col-md-12 text-center">
   
 			  <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-	Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved. This website and its content are the exclusive property of the website owner and are protected by copyright. Unauthorized use or reproduction is prohibited without the owner's permission.<a href="https://colorlib.com" target="_blank"></a>
+	Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website and its content are the exclusive property of the website owner and are protected by international copyright laws. No part of this website may be copied, reproduced, distributed, or transmitted in any form or by any means without the prior written permission of the website owner<a href="https://colorlib.com" target="_blank"></a>
 	<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 			</div>
 		  </div>
